--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Responsive Layouts</title>
+  <title>Project3</title>
   <meta name="description" content="This site will serve as the hub for many sub responsive layouts">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,86 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+
+<!-- Slideshow container -->
+<div class="purple-penguin">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="dragon-red fade">
+    <div class="numbertext">1 / 4</div>
+    <img src="img/IMG_0821.png" style="width:100%">
+    <div class="text"></div>
+  </div>
+
+  <div class="dragon-red fade">
+    <div class="numbertext">2 / 4</div>
+    <img src="img/maxresdefault.jpeg" style="width:100%">
+    <div class="text"></div>
+  </div>
+
+  <div class="dragon-red fade">
+    <div class="numbertext">3 / 4</div>
+    <img src="img/subathon graphic postable.jpg" style="width:100%">
+    <div class="text"></div>
+  </div>
+
+  <div class="dragon-red fade">
+    <div class="numbertext">4 / 4</div>
+    <img src="img/maxresdefault22.jpeg" style="width:100%">
+    <div class="text"></div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+</div>
+
+
+
+
+
+      </header>
+      <h1 class="blue-dolphin-default-title">Introduction</h1>
+        <div class="blue-dolphin-default-wrapper">
+          <p>Hi! My name is Trace Farrell and I am a Digital Art major at Lousiana State University with a minor in communications.</p>
+          <p>My focuses in my art consist of Photography, Image customization with photoshop and illustrator, video editing, and film making! </p>
+          <p>These are not the only things that I am able to create but just a few that I am passionate about.</p>
+        </div>
+        <h1 class="blue-dolphin-default-title">Experience</h1>
+        <div class="green-tiger-default-wrapper">
+          <p>Programs I have full knowledge of:</p>
+          <p>Adobe Photoshop</p>
+          <p>Adobe Illustrator</p>
+          <p>Adobe Premiere Pro</p>
+          <p>Adobe After Effects</p>
+          <p>Autodesk Maya</p>
+          <p>Zbrush</p>
+          <p>Blender</p>
+          <p>OBS Studio</p>
+          <p>Unreal Engine</p>
+        
+        </div>
+  
+      </main>
+      <footer class="blue-dolphin-footer"></footer>
+    </div>
+  </body>
+  
+  
   <script src="js/main.js"></script>
 </body>
 
