attempt at fixing the image on the home page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Full-width images with number and caption text -->
   <div class="dragon-red fade">
     <div class="numbertext">1 / 4</div>
-    <img src="img/IMG_0821.png" style="width:100%">
+    <img src="img/IMG_0821.PNG" style="width:100%">
     <div class="text"></div>
   </div>
 
