Updated the website for a more clean look

--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,17 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    </ul>
+  <div class="logo-header">
+    <p>Trace</p> 
+      <p>Farrell</p>
+  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+    <div class="animation start-home"></div>
+  </nav>
 
       </header>
       <h1 class="blue-dolphin-default-title">Contact</h1>
