--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
 
 <body>
   <!-- Place your site's HTML here -->
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-
+<div class="logo-header">
+  <p>Trace</p> 
+    <p>Farrell</p>
+</div>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+  <div class="animation start-home"></div>
+</nav>
 <!-- Slideshow container -->
 <div class="purple-penguin">
 
@@ -71,10 +75,6 @@
   <span class="dot" onclick="currentSlide(3)"></span>
   <span class="dot" onclick="currentSlide(4)"></span>
 </div>
-
-
-
-
 
       </header>
       <h1 class="blue-dolphin-default-title">Introduction</h1>
